button: fix width when overflowing

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -22,7 +22,7 @@
     border-color: var(--color);
     color: var(--color);
     border-radius: 15vh;
-    width: 100%;
+    width: auto;
     white-space: nowrap;
     text-align: center;
 }
